# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/: my-check-file.yml
.github/workflows/: main.yml
brain_games/: cli.py  game.py  game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_even.py  brain_games.py
